src/main/java/com/example/object/bad/ticket/domain/TicketSeller.java
package com.example.object.bad.ticket.domain;

public class TicketSeller {
    private TicketOffice ticketOffice;

    public TicketSeller(TicketOffice ticketOffice) {
        this.ticketOffice = ticketOffice;
    }

    public TicketOffice getTicketOffice() {
        return ticketOffice;
    }
}
